@@ -1,3 +1,8 @@
+2007-09-16 [colin]	3.0.0cvs13
+
+	* src/compose.c
+		Fix scrolling to cursor
+
 2007-09-16 [paul]	3.0.0cvs12
 
 	* po/sr.po
